Start removing open modules.